# browser

./: .gitignore  LICENSE  Makefile  README.md  browser.sh  caniremoveDockerfile  docker-compose.yaml  testing.md
browser/: CMakeLists.txt  README.md  jimberx264browser.pro
browser/src/: JCommandHandler.h  jimberx264browser.cpp  jimberx264browser.h  jimberx264webpage.cpp  jimberx264webpage.h  jimberx264webview.cpp  jimberx264webview.h  jpopupwindow.cpp  jpopupwindow.h  jxfiledownload.cpp  jxfiledownload.h  jxfileupload.cpp  jxfileupload.h  jxwindowcontroller.cpp  jxwindowcontroller.h  main.cpp  socketcommunication.cpp  socketcommunication.h
client/: config.js  config_local.js  config_prod.js  config_sofiebrowser.js  config_staging.js  config_testing.js  index.html
client/css/: new.css
client/examples/3rd_party_app_url/: index.html
client/examples/alert/: index.html
client/examples/audio/: getaudiofile.html  index.html  play.html  playwebsocket.html  sound.raw
client/js/: Extensions.js  Main.js  MouseEvent.js  PhysicalBrowser.js  SystemTools.js  firebase.js  firebase_aliases.js  user.js
client/pdf/: viewer.html  viewer.js
docker/: Dockerfile  start.sh
proto/: commands.yaml
qpa/: JimberQPA.pro
qpa/src/: JCommandHandler.h  jxbackingstore.cpp  jxbackingstore.h  jxclipboard.h  jxcursor.cpp  jxinputcontext.cpp  jxinputcontext.h  jxintegration.cpp  jxintegration.h  jxscreen.h  jxwindow.cpp  jxwindow.h  jxwsserver.cpp  jxwsserver.h  keymap.h  mouseevent.h
spawner/: package.json  start.sh
spawner/src/: api.ts  index.ts  moduleloader.ts
(+64 files in other folders)
